--- a/.github/workflows/cygwin-ci-attempt.yml
+++ b/.github/workflows/cygwin-ci-attempt.yml
@@ -25,12 +25,29 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      - name: Install Cygwin
+        # You may pin to the exact commit or the version.
+        # uses: egor-tensin/setup-cygwin@4f96f9fecb8c952fa32ff791b0a77d93d5191bb4
+        uses: egor-tensin/setup-cygwin@v3
+        with:
+          # Target platform
+          platform: # optional, default is x64
+          # Installation directory
+          install-dir: # optional, default is C:\tools\cygwin
+          # Packages to install, separated by a space
+          packages: # optional
+          # Value to set as the CYGWIN environment variable
+          env: # optional
+          # Convert symlinks in /usr/bin to hardlinks
+          hardlinks: # optional, default is 0
+    
+    # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: dash -c "echo Hello, world!"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          dash -c "echo Add other actions to build,"
+          dash -c "echo test, and deploy your project."
+          dash -c "uname -o"
