Make sure m4 directory exists before running "autoreconf"

--- a/.github/workflows/cygwin-ci-attempt.yml
+++ b/.github/workflows/cygwin-ci-attempt.yml
@@ -54,7 +54,8 @@ jobs:
 
       - name: Run autoreconf
         run: |
-          dash /usr/bin/autoreconf --force --install
+          dash -c "mkdir m4"
+          dash -c "dash /usr/bin/autoreconf --force --install"
 
       - name: Configure
         run: |
