--- a/.github/workflows/cygwin-ci-attempt.yml
+++ b/.github/workflows/cygwin-ci-attempt.yml
@@ -35,7 +35,7 @@ jobs:
           # Installation directory
           install-dir: C:\tools\cygwin # optional, default is C:\tools\cygwin
           # Packages to install, separated by a space
-          packages: dash gcc-core automake libtool # optional
+          packages: dash gcc-core automake libtool python38-cython # optional
           # Value to set as the CYGWIN environment variable
           env: # optional
           # Convert symlinks in /usr/bin to hardlinks
@@ -72,3 +72,13 @@ jobs:
       - name: Run Autotools distcheck
         run: |
           dash -c "make distcheck"
+
+      - name: Compile Cython extension module
+        run: |
+          dash -c "cythonize3.8 --force -3 --build --inplace src/one_plux.pyx"
+
+      - name: Attempt to import the extension module
+        env: |
+          PYTHONPATH=src
+        run: |
+          dash -c "python3.8 -c 'import one_plus; print([one_plus.one_plus(i) for i in range(10)])'"
