--- a/.github/workflows/cygwin-ci-attempt.yml
+++ b/.github/workflows/cygwin-ci-attempt.yml
@@ -35,7 +35,7 @@ jobs:
           # Installation directory
           install-dir: C:\tools\cygwin # optional, default is C:\tools\cygwin
           # Packages to install, separated by a space
-          packages: dash gcc-core automake libtool python38-cython python38-devel # optional
+          packages: dash gcc-core automake libtool python38-cython python38-devel python38-tox
           # Value to set as the CYGWIN environment variable
           env: # optional
           # Convert symlinks in /usr/bin to hardlinks
@@ -84,3 +84,7 @@ jobs:
           PYTHONPATH: src
         run: |
           dash -c "python3.8 -c 'import one_plus; print([one_plus.one_plus(i) for i in range(10)])'"
+
+      - name: Run tests in tox
+        run: |
+          dash -c "tox3.8"
