Include py38 in tox environments and add Cython to requirements.
I hope this lets tox start.  It should have problems loading most of
those environments, but it should be able to set it up.

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py35, py36, py37, pypy, jython
+envlist = py27, py35, py36, py37, py38, pypy, jython
 skip_missing_interpreters = True
+requires =
+    Cython>=0.16
 
 [testenv]
 deps =
