Add a fortran shared library to the Autotools check.
I'm nearly out of ideas.  I suppose I could install Cygwin's NumPy and
use the f2py from there.

--- a/configure.ac
+++ b/configure.ac
@@ -11,11 +11,13 @@ AM_INIT_AUTOMAKE([foreign dist-bzip2 dist-xz subdir-objects])
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_FC
 
 # Checks for libraries.
 LT_INIT()
 
 # Checks for header files.
+AC_CHECK_HEADERS([stdio.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
