Add an f2py wrapper of the Fortran functions.
The tox step will take twenty minutes or so now, so I will probably
take that out if I continue work on this.

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,13 @@ envlist = py27, py35, py36, py37, py38, pypy, jython
 skip_missing_interpreters = True
 requires =
     Cython>=0.16
+    numpy
 
 [testenv]
 deps =
     pytest
-    cython
+    cython>=0.16
+    py35: numpy<1.17
+    numpy
 commands =
     pytest
