--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=30.3.0", "wheel", "cython>=0.16"]
+requires = ["setuptools>=30.3.0", "wheel", "cython>=0.16", "numpy; python_version != '3.5'", "numpy<1.17; python_version == '3.5'"]
 build-backend = "setuptools.build_meta"
