Run "git fetch" in CI
This is broken on NumPy CI, so I'm trying to reproduce the failure so I can fix it.

--- a/.github/workflows/cygwin-ci-attempt.yml
+++ b/.github/workflows/cygwin-ci-attempt.yml
@@ -51,6 +51,10 @@ jobs:
           dash -c "echo Add other actions to build,"
           dash -c "echo test, and deploy your project."
           dash -c "uname -o"
+          
+      - name: Run git fetch
+        run: |
+          dash -c "git fetch --all -p"
 
       - name: Run autoreconf
         run: |
