Create cygidn-11.dll as a link to cygidn-12.dll
I hope this works.  The reason cygidn-12 exists is because it *shouldn't* work, but maybe git ignores those parts.

--- a/.github/workflows/cygwin-ci-attempt.yml
+++ b/.github/workflows/cygwin-ci-attempt.yml
@@ -35,7 +35,7 @@ jobs:
           # Installation directory
           install-dir: C:\tools\cygwin # optional, default is C:\tools\cygwin
           # Packages to install, separated by a space
-          packages: dash gcc-core gcc-fortran automake libtool python38-cython python38-devel python38-tox python38-virtualenv python38-distlib python38-numpy git libidn11
+          packages: dash gcc-core gcc-fortran automake libtool python38-cython python38-devel python38-tox python38-virtualenv python38-distlib python38-numpy git
           # Value to set as the CYGWIN environment variable
           env: # optional
           # Convert symlinks in /usr/bin to hardlinks
@@ -51,6 +51,11 @@ jobs:
           dash -c "echo Add other actions to build,"
           dash -c "echo test, and deploy your project."
           dash -c "uname -o"
+          
+      - name: Link libidn11 to libidn12
+        run: |
+          dash -c "ln -sf /usr/bin/cygidn-12.dll /usr/bin/cygidn-11.dll"
+          dash -c "ls -l /usr/bin/cygidn*"
           
       - name: Run git fetch
         run: |
